chore: add models
